# diggrtoolbox

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  readthedocs.yaml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.cache/v/cache/: lastfailed
.circleci/: config.yml
diggrtoolbox/: __init__.py
diggrtoolbox/configgr/: __init__.py  configgr.py
diggrtoolbox/deepget/: __init__.py  deepget.py
diggrtoolbox/linking/: __init__.py  helpers.py  link.py
diggrtoolbox/platform_mapping/: __init__.py  platform_mapping.py
diggrtoolbox/schemaload/: schemaload.py
diggrtoolbox/standardize/: __init__.py  standardize.py
diggrtoolbox/treeexplore/: __init__.py  test_treehash.py  treeexplore.py  treehash.py
diggrtoolbox/unified_api/: __init__.py  diggr_api.py
diggrtoolbox/zipaccess/: __init__.py  zip_access.py
docs/: Makefile  conf.py  diggrtoolbox.configgr.rst  diggrtoolbox.deepget.rst  diggrtoolbox.linking.resources.rst  diggrtoolbox.linking.rst  diggrtoolbox.platform_mapping.rst  diggrtoolbox.rdfutils.rst  diggrtoolbox.rst  diggrtoolbox.schemaload.rst  diggrtoolbox.standardize.rst  diggrtoolbox.treeexplore.rst  diggrtoolbox.unified_api.rst  diggrtoolbox.zipaccess.rst  examples.rst  index.rst  installation.rst  modules.rst
tests/: test_configgr.py  test_deepget.py  test_platform_mapper.py  test_standardize.py  test_treeexplore.py  test_treehash.py  test_zipaccess.py
tests/test_linking/: test_helpers.py  test_linking.py
