[tool.poetry]
name = "diggrtoolbox"
version = "0.4.1"
description = "Collection of tools developed for global game culture analysis"
authors = ["Florian Rämisch <raemisch@ub.uni-leipzig.de>", "Peter Mühleder <muehleder@saw-leipzig.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
roman = "3.2"
jsonschema = "^3.2.0"
PyYAML = "^5.1.1"
python_Levenshtein = "^0.12.0"
requests = "^2.20.1"

[tool.poetry.dev-dependencies]
Sphinx = "^3.0.0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
