[metadata]
name = diggrtoolbox
version = 0.1.dev
author = F. Rämisch / diggr
author-email = raemisch@ub.uni-leipzig.de
summary = "diggrtoolbox provides a variety of tools to be used in game research and the digital humanities in general."
description-file =
    README.rst
home-page = http://pypi.python.org/pypi/setup.cfg
requires-dist = setuptools
include_package_data = True

[files]
packages =
    setup
    setup.cfg
	diggrtoolbox
    diggrtoolbox.configgr
    diggrtoolbox.deepget
